--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="JOAQUIN MAX CUEVAS VENTURA | Portafolio 2025">
     <meta property="og:description" content="Arquitectura y diseño dráfico">
-    <meta property="og:image" content="https://tudominio.com/og-image.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/JoaquinMaxCuevasVentura/JoaquinMaxCuevasVentura-Portafolio2025/refs/heads/main/social-preview.jpg">
     <meta property="og:url" content="https://tudominio.com/">
     <meta property="og:site_name" content="Joaquin Max Cuevas Ventura Portfolio">
     <meta property="og:locale" content="es_BO">
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="JOAQUIN MAX CUEVAS VENTURA | Portafolio 2025">
     <meta name="twitter:description" content="Arquitectura y diseño dráfico">
-    <meta name="twitter:image" content="https://tudominio.com/twitter-card.jpg">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/JoaquinMaxCuevasVentura/JoaquinMaxCuevasVentura-Portafolio2025/refs/heads/main/social-preview.jpg">
     
     <!-- FAVICON DINÁMICO (SVG en código) -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23050505'/><text x='50' y='70' font-family='sans-serif' font-weight='bold' font-size='60' text-anchor='middle' fill='%23dc6b2f'>J</text></svg>">
